// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`debug 1`] = `
"<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function _callee]}
>
  <TextComponent
    text=\\"Press me 0\\"
  />
</TouchableOpacity>"
`;

exports[`debug.deep 1`] = `
"<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function bound touchableHandlePress]}
  onResponderGrant={[Function bound touchableHandleResponderGrant]}
  onResponderMove={[Function bound touchableHandleResponderMove]}
  onResponderRelease={[Function bound touchableHandleResponderRelease]}
  onResponderTerminate={[Function bound touchableHandleResponderTerminate]}
  onResponderTerminationRequest={[Function bound touchableHandleResponderTerminationRequest]}
  onStartShouldSetResponder={[Function bound touchableHandleStartShouldSetResponder]}
  style={
    Object {
      \\"opacity\\": 1,
    }
  }
>
  <Text>
    Press me 0
  </Text>
</View>"
`;

exports[`debug.deep async test 1`] = `
"<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function bound touchableHandlePress]}
  onResponderGrant={[Function bound touchableHandleResponderGrant]}
  onResponderMove={[Function bound touchableHandleResponderMove]}
  onResponderRelease={[Function bound touchableHandleResponderRelease]}
  onResponderTerminate={[Function bound touchableHandleResponderTerminate]}
  onResponderTerminationRequest={[Function bound touchableHandleResponderTerminationRequest]}
  onStartShouldSetResponder={[Function bound touchableHandleStartShouldSetResponder]}
  style={
    Object {
      \\"opacity\\": 1,
    }
  }
>
  <Text>
    Press me 1
  </Text>
</View>"
`;
